--- a/pom.xml
+++ b/pom.xml
@@ -62,5 +62,12 @@
             <version>1.0.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-maven</artifactId>
+            <version>2.10.0</version>
+        </dependency>
+
+
     </dependencies>
 </project>
